Git commit second attempt
modified:   site/index.html

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Nigga!</h1>
+<h1>Hello Coursera! This text is addeds</h1>
 </body>
 </html>
